--- a/src/main/resources/templates/account/role/adminList.html
+++ b/src/main/resources/templates/account/role/adminList.html
@@ -1,4 +1,4 @@
-<html xmlns="http://www.w3.org/1999/xhtml">
+<html >
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
@@ -52,7 +52,7 @@
         </table>
     </div>
 </div>
-<div th:replace="/account/role/addAdmin"></div>
+<div th:replace="account/role/addAdmin"></div>
 </body>
 </html>
 <script type="text/javascript">
