--- a/src/main/resources/templates/frontPage/fragments/footer.html
+++ b/src/main/resources/templates/frontPage/fragments/footer.html
@@ -1,36 +1,9 @@
 <!-- 底部信息 -->
-<div class="footer">
-    <div class="footer-tags">
-        <div class="tags-box inner">
-            <div class="tag-div">
-                <img src="/frontStatic/images/icons/footer_1.gif" alt="厂家直供">
-            </div>
-            <div class="tag-div">
-                <img src="/frontStatic/images/icons/footer_2.gif" alt="一件代发">
-            </div>
-            <div class="tag-div">
-                <img src="/frontStatic/images/icons/footer_3.gif" alt="美工活动支持">
-            </div>
-            <div class="tag-div">
-                <img src="/frontStatic/images/icons/footer_4.gif" alt="信誉认证">
-            </div>
-        </div>
-    </div>
-    <div class="footer-links inner">
-        <dl>
-            <dt>U袋网</dt>
-            <a href="temp_article/udai_article10.html"><dd>企业简介</dd></a>
-            <a href="temp_article/udai_article12.html"><dd>隐私说明</dd></a>
-        </dl>
-        <dl>
-            <dt>服务中心</dt>
-            <a href="temp_article/udai_article1.html"><dd>售后服务</dd></a>
-        </dl>
-    </div>
+
     <div class="copy-box clearfix">
         <ul class="copy-links">
-            <a href="udai_about.html"><li>联系我们</li></a>
-            <a href="temp_article/udai_article10.html"><li>企业简介</li></a>
+            <a href="/front/about"><li>联系我们</li></a>
+            <a href="/front/traditional"><li>企业简介</li></a>
         </ul>
         <!-- 版权 -->
         <p class="copyright">
