--- a/src/main/resources/templates/frontPage/index.html
+++ b/src/main/resources/templates/frontPage/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+
 <html >
 <head>
     <meta charset="UTF-8">
@@ -14,11 +14,11 @@
     <script src="/frontStatic/js/swiper.min.js" charset="UTF-8"></script>
     <script src="/frontStatic/js/global.js" charset="UTF-8"></script>
     <script src="/frontStatic/js/jquery.DJMask.2.1.1.js" charset="UTF-8"></script>
-    <title>U袋网</title>
+    <title>古风家</title>
 </head>
 <body>
 <!-- 顶部tab -->
-<div th:replace="/frontPage/fragments/head"></div>
+<div th:replace="frontPage/fragments/head"></div>
 
 <!-- 首页楼层导航 -->
 <nav class="floor-nav visible-lg-block">
@@ -234,8 +234,8 @@
     });
 </script>
 <!--右侧信息-->
-<div th:replace="/frontPage/fragments/right"></div>
+<div th:replace="frontPage/fragments/right"></div>
 <!-- 底部信息 -->
-<div th:replace="/frontPage/fragments/footer"></div>
+<div th:replace="frontPage/fragments/footer"></div>
 </body>
 </html>
