--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -1,4 +1,4 @@
-<html xmlns="http://www.w3.org/1999/xhtml">
+<html >
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
@@ -47,8 +47,7 @@
                                     class="lbl">保存密码</span></label></p>
                         </div>
                     </div>
-                    <div class="social-or-login center"><span class="">通知</span></div>
-                    <div class="margin-top color center">本网站系统不再对IE8以下浏览器提供支持，请见谅。</div>
+
                 </div>
             </div>
         </div>
