--- a/src/main/resources/templates/account/product/product_list.html
+++ b/src/main/resources/templates/account/product/product_list.html
@@ -1,4 +1,4 @@
-<html xmlns="http://www.w3.org/1999/xhtml">
+<html >
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
@@ -56,7 +56,7 @@
     </div>
 </div>
 
-<div th:replace="/account/product/editproduct"></div>
+<div th:replace="account/product/editproduct"></div>
 </body>
 </html>
 <script type="text/javascript">
@@ -249,15 +249,7 @@
         });
     }
     /*********滚动事件*********/
-    $("#page_style").niceScroll({
-        cursorcolor:"#888888",
-        cursoropacitymax:1,
-        touchbehavior:false,
-        cursorwidth:"5px",
-        cursorheight:"5px",
-        cursorborder:"0",
-        cursorborderradius:"5px"
-    });
+
   /*  $(document).ready(function(){
         var ReturnWindow=$('#contents', parent.document);
         var height = ReturnWindow.css("height");
