--- a/src/main/resources/templates/frontPage/item/shopCart.html
+++ b/src/main/resources/templates/frontPage/item/shopCart.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+
 <html>
 <head>
     <meta charset="UTF-8">
@@ -14,22 +14,17 @@
     <script src="/frontStatic/js/swiper.min.js" charset="UTF-8"></script>
     <script src="/frontStatic/js/global.js" charset="UTF-8"></script>
     <script src="/frontStatic/js/jquery.DJMask.2.1.1.js" charset="UTF-8"></script>
-    <title>U袋网</title>
+    <title>古风家</title>
 </head>
 <body>
 <!-- 顶部tab -->
 <div class="tab-header">
     <div class="inner">
-        <div class="pull-left">
-            <div class="pull-left">嗨，欢迎来到<span class="cr">U袋网</span></div>
-            <a href="agent_level.html">网店代销</a>
-            <a href="temp_article/udai_article4.html">帮助中心</a>
-        </div>
         <div class="pull-right">
-            <a href="/front/toFrontLogin"><span class="cr">登录</span></a>
-            <a href="/front/toFrontLogin?p=register">注册</a>
-            <a href="udai_welcome.html">我的U袋</a>
-            <a href="udai_order.html">我的订单</a>
+            <a shiro:notAuthenticated="" href="/front/toFrontLogin"><span class="cr">登录</span></a>
+            <a shiro:notAuthenticated="" href="/front/toFrontLogin">注册</a>
+            <a shiro:Authenticated="user" href="/front/toInfo">我的古风家</a>
+            <a shiro:Authenticated="user" href="/front/order">我的订单</a>
         </div>
     </div>
 </div>
@@ -252,6 +247,6 @@
 </div>
 
 <!-- 底部信息 -->
-<div th:replace="/frontPage/fragments/footer"></div>
+<div th:replace="frontPage/fragments/footer"></div>
 </body>
 </html>
