--- a/src/main/resources/templates/frontPage/item/shopCart_pay.html
+++ b/src/main/resources/templates/frontPage/item/shopCart_pay.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+
 <html>
 <head>
     <meta charset="UTF-8">
@@ -15,23 +15,17 @@
     <script src="/frontStatic/js/global.js" charset="UTF-8"></script>
     <script src="/frontStatic/js/jquery.DJMask.2.1.1.js" charset="UTF-8"></script>
     <script src="/assets/layer/layer.js" charset="UTF-8"></script>
-    <title>U袋网</title>
+    <title>古风家</title>
 </head>
 <body>
 <!-- 顶部tab -->
 <div class="tab-header">
     <div class="inner">
-        <div class="pull-left">
-            <div class="pull-left">嗨，欢迎来到<span class="cr">U袋网</span></div>
-            <a href="agent_level.html">网店代销</a>
-            <a href="temp_article/udai_article4.html">帮助中心</a>
-        </div>
         <div class="pull-right">
-            <a href="/front/toFrontLogin"><span class="cr">登录</span></a>
-            <a href="login.html?p=register">注册</a>
-            <a href="udai_welcome.html">我的U袋</a>
-            <a href="udai_order.html">我的订单</a>
-            <a href="udai_integral.html">积分平台</a>
+            <a shiro:notAuthenticated="" href="/front/toFrontLogin"><span class="cr">登录</span></a>
+            <a shiro:notAuthenticated="" href="/front/toFrontLogin">注册</a>
+            <a shiro:Authenticated="user" href="/front/toInfo">我的古风家</a>
+            <a shiro:Authenticated="user" href="/front/order">我的订单</a>
         </div>
     </div>
 </div>
@@ -40,7 +34,7 @@
     <div class="top-user">
         <div class="inner">
             <a class="logo" href="index.html"><img src="/frontStatic/images/icons/logo.jpg" alt="U袋网" class="cover"></a>
-            <div class="title">购物车</div>
+            <div class="title">古风家</div>
         </div>
     </div>
 </div>
@@ -67,8 +61,8 @@
                                             "                            <input name=\"addr\" checked=\"\" value=\"0\" autocomplete=\"off\" type=\"radio\"><i class=\"iconfont icon-radio\"></i>\n" +
                                             "                            "+data[i].address+"（"+data[i].receiverName+"  收） "+data[i].telPhone+" \n" +
                                             "                        </label>\n" +
-                                            "                        <a href=\"javascript:;\" class=\"default\">默认地址</a>\n" +
-                                            "                        <a href=\"udai_address_edit.html\" class=\"edit\">修改</a>\n" +
+                                            "                        \n" +
+                                            "                        \n" +
                                             "                    </div>\t\t\t\t\t\t"
                                     }
                                     $("#address").append(html);
@@ -136,7 +130,7 @@
                                     $("#orderId").text(orderId);
                                 },
                                 error: function (data) {
-                                    layer.alert(data.massage, {icon: 0});
+                                  alert(出错了);
                                 }
                             })
                         }
@@ -221,7 +215,10 @@
                             success:function (data) {
                                 alert(data.massage);
                                 location.href="/front/index";
-                            },error:{
+                            },
+                            error:function () {
+                                alert("出错了");
+
                             }
                         })
                     }
@@ -231,8 +228,8 @@
     </section>
 </div>
 <!--右侧信息-->
-<div th:replace="/frontPage/fragments/right"></div>
+<div th:replace="frontPage/fragments/right"></div>
 <!-- 底部信息 -->
-<div th:replace="/frontPage/fragments/footer"></div>
+<div th:replace="frontPage/fragments/footer"></div>
 </body>
 </html>
