--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,7 +1,7 @@
-<html  xmlns:th="http://www.thymeleaf.org" lang="en">
+<html  >
 <head>
     <meta charset="utf-8" />
-    <title>网站后台管理系统  </title>
+    <title>后台管理系统</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="/assets/css/bootstrap.min.css" rel="stylesheet" />
     <link rel="stylesheet" href="/assets/css/font-awesome.min.css" />
@@ -125,7 +125,7 @@
 </head>
 <body>
 
-<div th:replace="/fragments/header"></div>
+<div th:replace="fragments/header"></div>
 
 <div class="main-container" id="main-container">
     <script type="text/javascript">
@@ -136,7 +136,7 @@
             <span class="menu-text"></span>
         </a>
 
-        <div th:replace="/fragments/sidebar"></div>
+        <div th:replace="fragments/sidebar"></div>
 
         <div class="main-content">
             <script type="text/javascript">
@@ -161,7 +161,7 @@
 
 <!-- /.main-container -->
 <!-- basic scripts -->
-<div th:replace="/fragments/footer"></div>
+<div th:replace="fragments/footer"></div>
 </body>
 </html>
 
