--- a/src/main/resources/templates/index_home.html
+++ b/src/main/resources/templates/index_home.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+
 <html>
 
 <head>
@@ -15,7 +15,7 @@
     <link href="/font/iconfont.css" rel="stylesheet" type="text/css" />
     <link href="/css/module.css" rel="stylesheet" type="text/css" />
     <link href="/css/pages.css" rel="stylesheet" type="text/css" />
-    <title>系统框架首页</title>
+    <title>后台管理首页</title>
     <script src="/js/jquery-1.9.1.min.js" type="text/javascript"></script>
     <script src="/js/jquery.cookie.js" type="text/javascript"></script>
     <script src="/js/jquery.nicescroll.js" type="text/javascript"></script>
@@ -70,7 +70,6 @@
                     <div class="Shops_info clearfix">
                         <div class="left_shop">
                             <div class="left_shop_logo">
-                                <div class="shop_logo"><img src="" onerror="this.src='/images/noimage.gif',this.onerror=null"></div>
                                 <a href="#" class="btn bg-deep-blue padding5">进入首页</a>
                             </div>
                             <div class="Shops_content">
